# nonebot-plugin-gsmaterial

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: update-alias.py
.github/workflows/: update-alias.yml
data/: 资源压缩包下载地址.txt
data/gsmaterial/: config.json  cookie.json  item-alias.json
nonebot_plugin_gsmaterial/: __init__.py  config.py  data_source.py  material_draw.py
